--- a/src/views/base/login/index.less
+++ b/src/views/base/login/index.less
@@ -43,7 +43,7 @@
       font-size: 16px;
 
       &::after {
-        content: "";
+        content: '';
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         width: 10px;
@@ -138,7 +138,8 @@
     width: 60%;
   }
 
-  .title {}
+  .title {
+  }
 }
 
 @media (max-width: 850px) {
